--- a/pom.xml
+++ b/pom.xml
@@ -68,29 +68,38 @@
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.3.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>1.4.178</version>
-            </dependency>
+
             <!-- 			<dependency> -->
             <!-- 				<groupId>com.oracle</groupId> -->
             <!-- 				<artifactId>ojdbc7</artifactId> -->
             <!-- 				<version>12.1.0.1</version> -->
             <!-- 			</dependency> -->
+
+            <!-- Test -->
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
                 <version>2.2.5</version>
-                <scope>compile</scope>
+                <scope>test</scope>
             </dependency>
-
-            <!-- Test -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.3.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.178</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>1.7.8</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
