trying AutoValue/Genson to replace Lombok/Gson, broke SampleDomain into many class files

--- a/myeslib2-jdbi/pom.xml
+++ b/myeslib2-jdbi/pom.xml
@@ -57,9 +57,19 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.owlike</groupId>
+            <artifactId>genson</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
