--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>com.owlike</groupId>
+                <artifactId>genson</artifactId>
+                <version>1.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>1.4.178</version>
@@ -105,6 +111,12 @@
                 <artifactId>lombok</artifactId>
                 <version>1.14.0</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.auto.value</groupId>
+                <artifactId>auto-value</artifactId>
+                <version>1.0</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
