--- a/myeslib2-jdbi/pom.xml
+++ b/myeslib2-jdbi/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.myeslib</groupId>
             <artifactId>myeslib2-core</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.owlike</groupId>-->
+            <!--<artifactId>genson</artifactId>-->
+        <!--</dependency>-->
 
         <!-- Other -->
         <dependency>
