--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <build.date>${maven.build.timestamp}</build.date>
         <java.version>1.8</java.version>
-        <camel.version>2.14.0</camel.version>
-        <hazelcast.version>3.2.4</hazelcast.version>
+        <guice.version>4.0-beta5</guice.version>
     </properties>
 
     <!--<repositories>-->
@@ -68,7 +67,11 @@
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>${guice.version}</version>
+            </dependency>
             <!-- 			<dependency> -->
             <!-- 				<groupId>com.oracle</groupId> -->
             <!-- 				<artifactId>ojdbc7</artifactId> -->
@@ -86,12 +89,6 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.3.1</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.owlike</groupId>
-                <artifactId>genson</artifactId>
-                <version>1.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
