--- a/myeslib2-jdbi/pom.xml
+++ b/myeslib2-jdbi/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+        </dependency>
 
         <!-- test -->
         <dependency>
