Added dependency to "Java Concurrency in Practice Annotations"

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
                 <version>1.7.8</version>
             </dependency>
             <dependency>
+                <groupId>net.jcip</groupId>
+                <artifactId>jcip-annotations</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jdbi</groupId>
                 <artifactId>jdbi</artifactId>
                 <version>2.55</version>
