--- a/myeslib2-core/pom.xml
+++ b/myeslib2-core/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>org.slf4j</groupId>
