--- a/myeslib2-jdbi/pom.xml
+++ b/myeslib2-jdbi/pom.xml
@@ -158,6 +158,10 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+        </dependency>
 
         <!-- test -->
         <dependency>
