--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
                 <artifactId>guice</artifactId>
                 <version>${guice.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.inject.extensions</groupId>
+                <artifactId>guice-assistedinject</artifactId>
+                <version>${guice.version}</version>
+            </dependency>
             <!-- 			<dependency> -->
             <!-- 				<groupId>com.oracle</groupId> -->
             <!-- 				<artifactId>ojdbc7</artifactId> -->
