--- a/myeslib2-stack1/pom.xml
+++ b/myeslib2-stack1/pom.xml
@@ -130,10 +130,6 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi</artifactId>
         </dependency>
@@ -157,7 +153,8 @@
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- test for sample domain-->
+
+        <!-- for sample domain also in test scope-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -168,7 +165,6 @@
             <artifactId>gson</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- database for sample domain-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -189,6 +185,12 @@
             <artifactId>guice-assistedinject</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- micro bench-->
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
