--- a/myeslib2-example-api/pom.xml
+++ b/myeslib2-example-api/pom.xml
@@ -21,10 +21,6 @@
             <groupId>org.myeslib</groupId>
             <artifactId>myeslib2-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.myeslib</groupId>
-            <artifactId>myeslib2-stack1</artifactId>
-        </dependency>
 
         <!-- Other -->
         <dependency>
@@ -42,6 +38,10 @@
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
 
         <!-- test -->
