--- a/myeslib2-stack1/pom.xml
+++ b/myeslib2-stack1/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+        </dependency>
 
         <!-- test -->
         <dependency>
