--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
                 <version>1.0</version>
             </dependency>
             <dependency>
+                <groupId>aopalliance</groupId>
+                <artifactId>aopalliance</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
                 <groupId>com.esotericsoftware</groupId>
                 <artifactId>kryo-shaded</artifactId>
                 <version>3.0.0</version>
