--- a/myeslib2-stack1-core/pom.xml
+++ b/myeslib2-stack1-core/pom.xml
@@ -31,13 +31,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
         </dependency>
-
-        <!-- TODO decouple -->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
         </dependency>
-
         <!-- test -->
         <dependency>
             <groupId>junit</groupId>
