--- a/myeslib2-example-client/pom.xml
+++ b/myeslib2-example-client/pom.xml
@@ -21,10 +21,10 @@
             <groupId>org.myeslib</groupId>
             <artifactId>myeslib2-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.myeslib</groupId>
-            <artifactId>myeslib2-stack1-core</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.myeslib</groupId>-->
+            <!--<artifactId>myeslib2-stack1-core</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.myeslib</groupId>
             <artifactId>myeslib2-example-api</artifactId>
