broke hazelcast into jcache and jdbi modules

--- a/myeslib2-example-api/pom.xml
+++ b/myeslib2-example-api/pom.xml
@@ -31,10 +31,10 @@
             <groupId>com.google.auto.value</groupId>
             <artifactId>auto-value</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
