--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
             <dependency>
                 <groupId>com.google.auto.value</groupId>
                 <artifactId>auto-value</artifactId>
-                <version>1.0</version>
+                <version>1.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
